# NLP

./: .gitignore  pyproject.toml  task1.ipynb  task3.ipynb  task3.py
task1/: task1.py
task2/: task2.ipynb  task2.py
task3/: task3.ipynb  task3.py  task3v2.ipynb  task3v2.py
